--- a/src/main/resources/templates/OrderInfo.html
+++ b/src/main/resources/templates/OrderInfo.html
@@ -170,7 +170,7 @@
         else if (section === 'Orders'){
             window.location.href = '/OrderInfo'
         }
-        else if (section === 'Announcement'){
+        else if (section === 'Announcements'){
             window.location.href = '/adminWeb'
         }
     }
