--- a/src/main/resources/templates/shoppingWeb.html
+++ b/src/main/resources/templates/shoppingWeb.html
@@ -111,6 +111,7 @@
 
     // 将获取到的信息动态显示在页面上
     function displayProducts(products){
+        // 绑定展示区域
         const mainContent = $("#main-content");
         mainContent.empty();
 
