--- a/src/main/resources/templates/UserInfo.html
+++ b/src/main/resources/templates/UserInfo.html
@@ -187,7 +187,7 @@
         else if (section === 'Orders'){
             window.location.href = '/OrderInfo'
         }
-        else if (section === 'Announcement'){
+        else if (section === 'Announcements'){
             window.location.href = '/adminWeb'
         }
     }
