--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -99,7 +99,7 @@
     </div>
 </div>
 <script type="text/javascript" charset="UTF-8">
-    // 注册账号
+    // 登录账号
     $("#login").on("click", function (){
         $.ajax({
             url:"/user/login",
